--- a/WebApplication3/Views/Home/Index.cshtml
+++ b/WebApplication3/Views/Home/Index.cshtml
@@ -2,256 +2,101 @@
 
 @{
     Layout = "_Layout";
-    ViewData["Title"] = "Callum's special page";
+    ViewData["Title"] = "Asset Track";
 }
 
-
-
-<div class="row">
-    <div class="col-md-8 order-md-1">
-        <h4 class="mb-3">Billing address</h4>
-        <form class="needs-validation" novalidate>
-            <div class="row">
-                <div class="col-md-6 mb-3">
-                    <label for="firstName">First name</label>
-                    <input type="text" class="form-control" id="firstName" placeholder="" value="" required>
-                    <div class="invalid-feedback">
-                        Valid first name is required.
-                    </div>
-                </div>
-                <div class="col-md-6 mb-3">
-                    <label for="lastName">Last name</label>
-                    <input type="text" class="form-control" id="lastName" placeholder="" value="" required>
-                    <div class="invalid-feedback">
-                        Valid last name is required.
-                    </div>
-                </div>
-            </div>
-            <div class="mb-3">
-                <label for="email">Email <span class="text-muted">(Optional)</span></label>
-                <input type="email" class="form-control" id="email" placeholder="firstname.lastname@parcelhub.co.uk">
-                <div class="invalid-feedback">
-                    Please enter a valid email address for shipping updates.
-                </div>
-            </div>
-
-            <div class="mb-3">
-                <label for="address">Address</label>
-                <input type="text" class="form-control" id="address" placeholder="1234 Main St" required>
-                <div class="invalid-feedback">
-                    Please enter your shipping address.
-                </div>
-            </div>
-
-            <div class="mb-3">
-                <label for="address2">Address 2 <span class="text-muted">(Optional)</span></label>
-                <input type="text" class="form-control" id="address2" placeholder="Apartment or suite">
-            </div>
-
-            <div class="row">
-                <div class="col-md-5 mb-3">
-                    <label for="country">Country</label>
-                    <select class="custom-select d-block w-100" id="country" required>
-                        <option value="">Choose...</option>
-                        <option>United States</option>
-                    </select>
-                    <div class="invalid-feedback">
-                        Please select a valid country.
-                    </div>
-                </div>
-                <div class="col-md-4 mb-3">
-                    <label for="state">State</label>
-                    <select class="custom-select d-block w-100" id="state" required>
-                        <option value="">Choose...</option>
-                        <option>California</option>
-                    </select>
-                    <div class="invalid-feedback">
-                        Please provide a valid state.
-                    </div>
-                </div>
-                <div class="col-md-3 mb-3">
-                    <label for="zip">Zip</label>
-                    <input type="text" class="form-control" id="zip" placeholder="" required>
-                    <div class="invalid-feedback">
-                        Zip code required.
-                    </div>
-                </div>
-            </div>
-            <hr class="mb-4">
-            <div class="custom-control custom-checkbox">
-                <input type="checkbox" class="custom-control-input" id="same-address">
-                <label class="custom-control-label" for="same-address">Shipping address is the same as my billing address</label>
-            </div>
-            <div class="custom-control custom-checkbox">
-                <input type="checkbox" class="custom-control-input" id="save-info">
-                <label class="custom-control-label" for="save-info">Save this information for next time</label>
-            </div>
-            <hr class="mb-4">
-
-            <h4 class="mb-3">Payment</h4>
-
-            <div class="d-block my-3">
-                <div class="custom-control custom-radio">
-                    <input id="credit" name="paymentMethod" type="radio" class="custom-control-input" checked required>
-                    <label class="custom-control-label" for="credit">Credit card</label>
-                </div>
-                <div class="custom-control custom-radio">
-                    <input id="debit" name="paymentMethod" type="radio" class="custom-control-input" required>
-                    <label class="custom-control-label" for="debit">Debit card</label>
-                </div>
-                <div class="custom-control custom-radio">
-                    <input id="paypal" name="paymentMethod" type="radio" class="custom-control-input" required>
-                    <label class="custom-control-label" for="paypal">Paypal</label>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-md-6 mb-3">
-                    <label for="cc-name">Name on card</label>
-                    <input type="text" class="form-control" id="cc-name" placeholder="" required>
-                    <small class="text-muted">Full name as displayed on card</small>
-                    <div class="invalid-feedback">
-                        Name on card is required
-                    </div>
-                </div>
-                <div class="col-md-6 mb-3">
-                    <label for="cc-number">Credit card number</label>
-                    <input type="text" class="form-control" id="cc-number" placeholder="" required>
-                    <div class="invalid-feedback">
-                        Credit card number is required
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-md-3 mb-3">
-                    <label for="cc-expiration">Expiration</label>
-                    <input type="text" class="form-control" id="cc-expiration" placeholder="" required>
-                    <div class="invalid-feedback">
-                        Expiration date required
-                    </div>
-                </div>
-                <div class="col-md-3 mb-3">
-                    <label for="cc-expiration">CVV</label>
-                    <input type="text" class="form-control" id="cc-cvv" placeholder="" required>
-                    <div class="invalid-feedback">
-                        Security code required
-                    </div>
-                </div>
-            </div>
-            <hr class="mb-4">
-            <button class="btn btn-primary btn-lg btn-block" type="submit">Continue to checkout</button>
-        </form>
-    </div>
-</div>
-
-
-
-
-
-
-
-
-<!--<form asp-controller="Home" asp-action="Edit" method="post">
+<form asp-controller="Home" asp-action="Edit" method="post">
     <h1>Submit Asset Info</h1>
-    <p class="text-black-50">This is where you submit all your asset tracking info.</p>
-
     <div class="row">
-        <div class="col-md-6">
-            <label>
-                <font size=5>First Name</font>
-            </label>
-            <br />
-            <input asp-for="FirstName" />
-        </div>
+        <div class="col-md-8 order-md-1">
+            <p class="text-black-50">This is where you submit all your asset tracking info.</p>
+            <form class="needs-validation" novalidate>
+                <div class="row">
+                    <div class="col-md-6 mb-3">
+                        <label for="FirstName">First name</label>
+                        <input asp-for="FirstName" type="text" class="form-control" id="firstName" placeholder="" value="" required>
+                        <div class="invalid-feedback">
+                            Valid first name is required.
+                        </div>
+                    </div>
+                    <div class="col-md-6 mb-3">
+                        <label for="LastName">Last name</label>
+                        <input asp-for="LastName" type="text" class="form-control" id="lastName" placeholder="" value="" required>
+                        <div class="invalid-feedback">
+                            Valid last name is required.
+                        </div>
+                    </div>
+                </div>
+                <div class="mb-3">
+                    <label for="Email">Email</label>
+                    <input asp-for="Email" type="email" class="form-control" id="email" placeholder="firstname.lastname@parcelhub.co.uk">
+                    <div class="invalid-feedback">
+                        Please enter a valid email address for shipping updates.
+                    </div>
+                </div>
+                <hr class="mb-4">
+                <div class="mb-3">
+                    <label for="Type">Computer Type</label>
+                    <select asp-for="Type" class="custom-select d-block w-100" id="type" required>
+                        <option value="">Choose...</option>
+                        <option>Personal Machine</option>
+                        <option>Laptop</option>
+                        <option>Desktop</option>
+                    </select>
+                    <div class="invalid-feedback">
+                        Please provide a valid Computer Type.
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-5 mb-3">
+                        <label for="MsNo">Machine Number</label>
+                        <input asp-for="MsNo" type="text" class="form-control" id="MsNo" placeholder="Example: MS-L001">
+                    </div>
+                    <div class="col-md-5 mb-3">
+                        <label for="As1">Asset Tracking Number</label>
+                        <input asp-for="As1" type="text" class="form-control" id="As1" placeholder="Found on the Parcelhub sticker">
+                    </div>
+                </div>
+                <hr class="mb-4">
+                <div class="custom-control custom-checkbox">
+                    <input asp-for="Keyboard" type="checkbox" id="Keyboard">
+                    <label for="Keyboard">Keyboard?</label>
+                </div>
+                <div class="custom-control custom-checkbox">
+                    <input asp-for="Mouse" type="checkbox" id="Mouse?">
+                    <label for="Mouse<">Mouse?</label>
+                </div>
+                <hr class="mb-4">
+                <button data-toggle="collapse" class="btn btn-primary btn-lg btn-block" data-target="#demo">I Have Screens!</button>
+                <br />
+                <div id="demo" class="collapse">
+                    <div class="mb-3">
+                        <label for="Srnnum">Number Of Screens</label>
+                        <select asp-for="Srnnum" class="custom-select d-block w-100" id="srnnum" required>
+                            <option>None</option>
+                            <option>1</option>
+                            <option>2</option>
+                        </select>
 
-        <div class="col-md-6">
-            <label>
-                <font size=5>Second Name</font>
-            </label>
-            <br />
-            <input asp-for="SecondName" />
-        </div>
-    </div>-->
-@*<div class="col-md-6">
-        <div class="col-md-12">
-            <label>
-                <font size=5>First Name</font>
-            </label>
-            <br />
-            <input asp-for="FirstName" />
-        </div>
-    </div>
-
-    <div class="col-md-6">
-        <div class="col-md-12">
-            <label>
-                <font size=5>Second Name</font>
-            </label>
-            <br />
-            <input asp-for="SecondName" />
-        </div>
-    </div>*@
-
-@*<div class="row">
-        <div class="col-sm-3">
-            <label>
-                <font size=5>Computer Type</font>
-            </label>
-            <br />
-            <select name="Type">
-                <option>Nothing</option>
-                <option>Laptop</option>
-                <option>Desktop PC</option>
-            </select>
-            <br />
-            <br />
-            <label>
-                <font size=5>Screen Type</font>
-            </label>
-            <br />
-            <select name="Screen">
-                <option>None</option>
-                <option>1</option>
-                <option>2</option>
-            </select>
-        </div>
-
-        <div class="col-sm-3">
-            <label>
-                <font size=5>Asset Number</font>
-            </label>
-            <input asp-for="AssetNumber" />
-            <br />
-            <br />
-            <label>Asset Numbers (If Applicable)</label>
-            <input asp-for="AssetNumbers" />
-        </div>
-
-
-        <div class="col-sm-3">
-            <label>
-                <font size=5>Extras?</font>
-            </label>
-            <br />
-            <div class="col-sm">
-                <input asp-for="HeadsetIncluded" />
-                <label asp-for="HeadsetIncluded">Headset?</label>
-            </div>
-
-
-            <div class="col-sm">
-                <input asp-for="KeyboardMouse" />
-                <label asp-for="KeyboardMouse">Keyboard/Mouse?</label>
-            </div>
-            <br />
-            <div class="col-sm">
-                <input asp-for="DockingStation" />
-                <label asp-for="DockingStation">Docking Station?</label>
-            </div>
-        </div>
-    </div>*@
-<!--<div class="row">
-        <div class="col-md-6">
-            <button type="button" class="btn btn-primary btn-lg btn-block">Submit</button>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-5 mb-3">
+                            <label for="Scras">Screen Asset Numbers</label>
+                            <input asp-for="Scras" type="text" class="form-control" id="scras2" placeholder="Asset Tracking Numbers here">
+                        </div>
+                        <div class="col-md-5 mb-3">
+                            <label for="Scras2">Screen Asset Numbers</label>
+                            <input asp-for="Scras2" type="text" class="form-control" id="scras2" placeholder="Asset Tracking Numbers here">
+                        </div>
+                    </div>
+                    <div class="custom-control custom-checkbox">
+                        <input asp-for="Dstm" type="checkbox" id="dstm">
+                        <label for="Dstm">Docking Station?</label>
+                    </div>
+                </div>
+                <hr class="mb-4">
+                <button class="btn btn-primary btn-lg btn-block" type="submit">Submit</button>
+            </form>
         </div>
     </div>
-</form>-->
+</form>
